# ai-landing-zone-design

./: .gitignore  HLD-old.md  HLD.md  README.md  mkdocs.yml  requirements-docs.txt
.github/: copilot-instructions.md
.github/workflows/: docs.yml
mcp-server/: README.md  pyproject.toml
mcp-server/octa_design_mcp/: __init__.py  __main__.py  server.py
new-structure/: README.md  index.md
new-structure/.ailz/: config.json  template-version
new-structure/assets/: AI Observability - HLR and Detailed Requirements.docx  AI Observability - HLR and Detailed Requirements.md  AI Observability - HLR and Detailed Requirements.source.md  index.json
new-structure/decisions/: KDD-001-tool-registry-and-categorisation.md  KDD-002-mcp-as-universal-tool-exposure.md  KDD-003-no-1to1-api-to-mcp-mapping.md  KDD-004-deterministic-operations-as-mcp-tools.md  KDD-005-apim-as-central-gateway.md  KDD-006-apim-native-mcp-conversion.md  KDD-007-foundry-toolbox-as-mcp-gateway.md  KDD-008-group-tools-by-intent-not-by-system.md  KDD-009-isolate-sensitive-tools-via-attributes.md  KDD-010-context-window-optimisation.md  KDD-011-reuse-ais-abstraction-layer.md  KDD-012-maximise-work-not-done.md  README.md  index.md  (+17 more)
recommendations/: kdd-compliance-in-code-reviews.md
transcripts/: Contoso_Microsoft - regular technical check-in call 26 May 2026.md  Microsoft Support - Foundry platform and MCP servers 22 may 2026.md  Mitie_Microsoft - regular technical check-in call 23rd June AI Observability Agent365.docx  Mitie_Microsoft - regular technical check-in call 23rd June AI Observability Agent365.md
(+32 files in other folders)
