[project]
name = "octa-design-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing the OCTA Agentic Platform design workspace (KDDs, OQs, HLD, transcripts, assets)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
octa-design-mcp = "octa_design_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["octa_design_mcp"]
